# game-exercise

./: .coverage  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Pipfile  README  README.md  check_coverage_report  check_lint  check_mypy  coverage.xml  demos  pyproject.toml  run  run_animation  run_animation.py  run_client  run_client.py  run_experiment  run_experiment.py  run_graphical_debug  run_graphical_debug.py  run_network_feature_test  run_render_feature_test  run_server  run_server.py  run_sound_check  run_sound_feature_test  run_tests  run_tests_ci  run_user_input_feature_test
.github/: dependabot.yml
client/: :qa  README.md  commands.py  event_handler.py  events.py  events_processor.py  game.py  game_data.py  options.py  profile.py  screen_manager.py  screens.py
client/components/: README.md  pyproject.toml
client/components/components/: api.py  image_cursor.py  overlay.py
client/demos/labyrinth/: README.md  pyproject.toml  run.py
client/demos/labyrinth/labyrinth/: commands.py  events.py  screen_loader.py  ui_loader.py
client/demos/labyrinth/labyrinth/screens/another/: another.py  ui.json
client/demos/labyrinth/labyrinth/screens/main/: main.py  scene.json  ui.json  ui.py
client/engine/: README.md  (+13 more)
client/feature_tests/render/: pyproject.toml  run
client/game/: commands.py  event_handler.py  event_processor.py  events.py  game_data.py  music.py  pyproject.toml  run.py  sounds.py  ui.py
client/game/chat/: commands.py  event_handler.py  events.py  test_chat.py  ui.py
client/game/chat/tests/: test_chat.py
client/game/docs/: README.md  new_screen.md
client/game/game/: event_handler.py  events.py  ui.py
client/game/game/chat/: commands.py  events.py
client/game/game/chat/tests/: test_chat.py
client/game/game/pieces/: commands.py  events.py
client/game/game/screens/intro/: ui.py
client/game/game/screens/intro/tests/: test_intro.py
client/game/game/screens/lobby/: lobby.py  ui.py
client/game/game/screens/lobby/tests/: test_lobby.py
client/game/images/: coin.json
client/game/pieces/: commands.py  events.py
client/game/pieces/tests/: test_pieces.py
client/game/screens/credits/: credits.py  ui.py
client/game/screens/credits/tests/: test_credits.py
client/game/screens/enter_name/: enter_name.py  ui.py
client/game/screens/enter_name/tests/: test_enter_name.py
client/game/screens/game_list/: game_list.py  ui.py
client/game/screens/game_list/tests/: test_game_list.py
client/game/screens/in_game/: in_game.py  ui.py
client/game/screens/in_game/tests/: test_in_game_screen.py
client/game/screens/intro/: intro.py  ui.py
client/game/screens/intro/tests/: test_intro.py
client/game/screens/join_game/: join_game.py  ui.py
client/game/screens/join_game/tests/: test_join_game.py
client/game/screens/lobby/: lobby.py  ui.py
client/game/screens/lobby/tests/: test_lobby.py
client/game/screens/new_game/: new_game.py  ui.py
client/game/screens/new_game/tests/: test_new_game.py
client/game/screens/options/: options.py  ui.py
client/game/screens/options/tests/: test_options.py
client/game/screens/profiles/: profiles.py  ui.py
client/game/screens/profiles/tests/: test_profiles.py
client/game/tests/: test_game.py
client_data/: profile
common/: events.py  game_data.py  messages.py
docs/: README.md
experiment_data/: 82921a92-cb65-485b-a522-1a84e9696d2a  Default profile  profile
ideas/: constants.py  game.py
server/: commands.py  errors.py  game.py  persistence.py  server.py
(+449 files in other folders)
