[tool.poetry]
name = "game"
version = "0.2.0"
description = ""
authors = ["José Ignacio Amelivia Santiago <jignacio.amelivia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "*"
pyopengl = "^3.1.10"
pyopengl-accelerate = "^3.1.10"
pillow = "^11.3.0"
freetype-py = "^2.5.1"
numpy = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "*"
mock = "*"
pudb = "*"
black = "*"
pre-commit = "*"
pytest-cov = "*"
codecov = "*"
numpy = "*"
mypy = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
